Windows path error resolved and features added.